--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/forms": "^0.5.10",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "10.4.20",
