--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.76.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
@@ -39,6 +42,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
