--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@tanstack/react-query-devtools": "^5.76.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
@@ -43,19 +43,23 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
-      "bcrypt",
+      "bcryptjs",
       "sharp"
     ],
     "onlyBuiltDependencies": [
-      "bcrypt",
+      "bcryptjs",
       "sharp"
     ]
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
